--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "client-install": "npm install --prefix client",
     "start": "node ./bin/www",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"nodemon\" \"npm run client\" "
+    "dev": "concurrently \"nodemon\" \"npm run client\" ",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run client-install && npm run build --prefix client"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
